[tool.poetry]
name = "partx"
version = "0.2.0"
description = ""
authors = ["daittan <tkhandai@asu.edu>"]
packages = [{include="partx"}]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
tensorflow-io-gcs-filesystem = { version = "0.27.0"}
tensorflow = "~2.10"
scikit-learn = "^1.1.1"
scipy = "^1.8.1"
scikit-optimize = "^0.9.0"
coverage = "^6.4"
matplotlib = "^3.5.2"
treelib = "^1.6.1"
pandas = "^1.4.3"
pathos = "^0.2.9"
Sphinx = "^5.3.0"
psy-taliro = {version = "1.0.0b9", extras = ["rtamt"]}
tqdm = "^4.66.2"
pygame = "^2.5.2"
gymnasium = "^0.29.1"
opencv-python = "^4.9.0.80"
botorch = "^0.10.0"
stable-baselines3 = {version = "^2.3.0", extras = ["extra"]}
torch = "^2.2.2"
gpytorch = "^1.11"
imageio = "^2.34.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
